fix theme switch on mobile

--- a/components/ThemeSwitch/ThemeSwitch.css
+++ b/components/ThemeSwitch/ThemeSwitch.css
@@ -5,6 +5,7 @@
   background-color: #f4f4f4;
   cursor: pointer;
   transition: all .5s;
+  z-index: 2;
 }
 
 .toggle.light,
